--- a/index.html
+++ b/index.html
@@ -460,8 +460,9 @@
         <div class="footer-wrapper">
           <p class="wrapper-paragraph">Subscribe</p>
           <form class="subscribe-form" name="Subscribe">
-            <label for="subscribe-form-field">
+            <label class="lable-form" for="subscribe-form-field">
               <input
+                name="email"
                 id="subscribe-form-field"
                 class="subscribe-form-input"
                 type="email"
