--- a/index.html
+++ b/index.html
@@ -490,15 +490,15 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form form" name="contacts" novalidate>
           <div class="form-wrapper">
-            <label class="form-lable" for="user_name"> Name</label>
+            <label class="form-lable" for="user-name"> Name</label>
             <div class="form-field">
               <input
                 class="form-input"
-                id="user_name"
+                id="user-name"
                 type="text"
-                name="name"
+                name="user-name"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#iconperson-black"></use>
               </svg>
             </div>
