--- a/index.html
+++ b/index.html
@@ -520,11 +520,11 @@
           </div>
 
           <div class="form-wrapper">
-            <label class="form-lable" for="email_address"> Email</label>
+            <label class="form-lable" for="email-address"> Email</label>
             <div class="form-field">
               <input
                 class="form-input"
-                id="email_address"
+                id="email-address"
                 type="text"
                 name="email"
               />
@@ -534,16 +534,17 @@
             </div>
           </div>
 
-          <div>
-            <label class="form-lable" for="user_comment">Comment</label>
+          <div class="form-text-input">
+            <label class="form-lable" for="user-comment">Comment</label>
             <textarea
               class="form-comment"
-              name="user_comment"
-              id="user_comment"
+              name="user-comment"
+              id="user-comment"
               rows="4"
               placeholder="Text input"
             ></textarea>
           </div>
+
           <label class="form-agreement">
             <input
               class="checkbox visually-hidden"
